feat(api): 새 칸에서 배너 문구를 만든다
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01AF6sy5LKQ66fLLxX8uHbrH